--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,84 @@
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-
+ 
+ 
 .topBelt {
     width: 100%;
-    height: 20px;
-    background-color: blueviolet;
+    height: 30px;
+    background-color: #60267F;
     text-align: center;
     color: white;
 }
-
-.learn-more {
+ 
+ 
+.header {
+    width: 100%;
+    height: 80px;
+    
+    box-shadow: -1px 6px 12px -6px rgba(0,0,0,0.2);
+    -webkit-box-shadow: -1px 6px 12px -6px rgba(0,0,0,0.2);
+    -moz-box-shadow: -1px 6px 12px -6px rgba(0,0,0,0.2);
+}
+ 
+.learnMore {
     border-bottom: 1px solid white;
 }
-
+ 
 .svg {
     width: 100%;
     height: 500px;
 }
-
-
-.nav-bar {
+ 
+.navigationContainer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 0 30px;
+}
+ 
+.navChoice {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+ 
+ 
+.navChoice ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+
+.navChoice ul li {
+    list-style: none;
+    color:#60267F;
+    font-family: "Roboto", sans-serif;
+}
+
+.navChoice ul li a{
+    text-decoration: none;
+}
+
+
+.navButton {
+    border: 3px solid #9A54BC;
+    color: #9A54BC;
+    background-color: transparent;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0,1s ease-in-out;
+
+}
+
+.navButton:hover {
+    background-color: #9A54BC;
+    color: white;
 }
