--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size:  'Roboto', sans-serif;
 }
  
+
+h2 {
+    font-weight: 500;
+    font-size: 24px;
+    text-align: center;
+}
  
 .topBelt {
     width: 100%;
@@ -17,7 +24,6 @@
 .header {
     width: 100%;
     height: 80px;
-    
     box-shadow: -1px 6px 12px -6px rgba(0,0,0,0.2);
     -webkit-box-shadow: -1px 6px 12px -6px rgba(0,0,0,0.2);
     -moz-box-shadow: -1px 6px 12px -6px rgba(0,0,0,0.2);
@@ -74,6 +80,7 @@
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: bold;
     transition: all 0,1s ease-in-out;
 
 }
@@ -82,3 +89,90 @@
     background-color: #9A54BC;
     color: white;
 }
+
+.headCirclesContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.headCirclesHeader {
+    color: #2B0236;
+    font-size: 42px;
+    width: 50%;
+    text-align: center;
+    margin-top: 50px;
+}
+
+
+.topHeadButton {
+    padding: 10px 20px;
+    background-color: #9A54BC;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+
+.topHeadButton:hover {
+    background-color: #fff;
+    color: #9A54BC;
+}
+
+.relative {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    width: 100%;
+    height: 400px;
+    
+
+
+}
+
+.absolute {
+    position: absolute;
+}
+
+.smallCircle {
+    top: 0;
+}
+
+.rectangle {
+    top: 30px;
+}
+
+.collabWords {
+    top: 130px;
+}
+
+.circlesButton {
+    bottom: 60px;
+    padding: 5px 10px;
+    border: solid 2px #60267F;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 120px;
+}
+
+.fiveIconsContainer {
+    width: 100%;
+    padding: 50px 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+
+.fiveIconsImgContainer  {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
