--- a/css/main.css
+++ b/css/main.css
@@ -176,3 +176,110 @@ h2 {
     justify-content: space-between;
 }
 
+.howCollabHelpContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 100px;
+    margin-top: 100px;
+    width: 100%;
+}
+
+.howHelpBox {
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+   
+    align-items: center;
+}
+
+.howHelpLeft {
+    width: 60%;
+    
+}
+
+.howHelpBtn {
+    display: flex;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 1px 5px 9px -2px rgba(0,0,0,0.75);
+-webkit-box-shadow: 1px 5px 9px -2px rgba(0,0,0,0.75);
+-moz-box-shadow: 1px 5px 9px -2px rgba(0,0,0,0.75);
+padding: 5px;
+}
+
+.btnHelp {
+    padding: 5px;
+    border: none;
+    background-color: transparent;
+    border-radius: 3px;
+}
+
+.btnHelp:hover {
+    background-color: #9A54BC;
+    color: #fff;
+}
+
+.howHelpVendorBtn {
+    width: 50%;
+    
+    
+}
+
+.HowHelpSupervisorBtn {
+    width: 50%;
+}
+
+.howHelpTextContainer {
+    display: flex;
+    margin-top: 50px;
+    gap: 15px;
+    flex-direction: column;
+
+
+}
+
+.howHelpText {
+    background-color: #f2f2f2;
+    padding: 20px 10px;
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.howHelpTextHeaders {
+    font-weight: 700;
+}
+
+
+
+.howHelpRight {
+    width: 40%;
+    display: flex;
+    align-items: center;
+}
+
+
+.howHelpPhone {
+    height: 600px;
+}
+
+.videoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    margin-top: 100px;
+    gap: 50px;
+}
+
+.videoPara {
+    width: 50%;
+    text-align: center;
+}
+
+iframe {
+    width: 1000px;
+    height: 500px;
+}
