--- a/css/main.css
+++ b/css/main.css
@@ -283,3 +283,96 @@ iframe {
     width: 1000px;
     height: 500px;
 }
+
+.projectDoneContainer {
+    width: 100%;
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projectDoneCardsContainer {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+.projectDoneCard {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.projectDonePara1 {
+    color: #60267F;
+}
+
+.projectDoneImg {
+    width: 350px;
+}
+
+.collabAppsCardsContainer {
+    background-color: #e2bdf20e;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 150px;
+}
+
+.collabAppsCardsPara {
+    color: #A79D9D;
+    font-size: 11px;
+    margin-top: 10px;
+}
+
+.collabAppsDiscount {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.collabAppsDiscountMonthly {
+    color: #A79D9D;
+    font-size: 11px;
+}
+
+
+.collabAppsDiscountYearly {
+    font-size: 11px;
+}
+
+.collabAppsDiscountTenProcents {
+    font-size: 8px;
+    background-color: yellow;
+    margin-left: 5px;
+}
+
+.collabCardsConatainer {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin-top: 50px;
+}
+
+
+.card {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid #A79D9D;
+
+}
+
+.collabCardsList {
+    list-style: none;
+}
+
+
+.collabCardsList::before {
+    
+}
