--- a/css/main.css
+++ b/css/main.css
@@ -376,3 +376,114 @@ iframe {
 .collabCardsList::before {
     
 }
+
+
+/* Join Us Section */
+
+.collabJoinUsContainer {
+
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+}
+
+/* Teams container */
+.collabJoinUs {
+    width: 1156px;
+    height: 400px;
+    display: grid;
+    grid-template-rows: repeat(1, 300px);
+    grid-template-columns: repeat(8, 1fr);
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    background-image: url(../img/joinUs/Vector\ 1.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 80%;
+}
+
+/* Title */
+.collabJoinUsTitle {
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+/* paragraph */
+.collabJoinUsPara {
+    text-align: center;
+    width: 95ch;
+}
+
+
+/* Button */
+.collabJoinUsBtn {
+    width: 170px;
+    padding: 10px;
+    background-color: #9A54BC;
+    color: #fff;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    margin-bottom: 100px;
+    
+    
+}
+
+.collabJoinUsBtn:hover {
+    background-color: #fff;
+    color: #9A54BC;
+    border: 2px solid #9A54BC;
+}
+
+
+
+
+/* images position */
+.img1 {
+    margin-bottom: 180px;
+    margin-left: 100px;
+}
+
+.img2 {
+    margin-top: 80px;
+}
+
+.img3 {
+    margin-top: 40px;
+}
+
+.img4 {
+   margin-top: 180px;
+   
+}
+
+.img5 {
+    margin-top: 200px;
+}
+
+.img6 {
+    margin-top: 140px;
+}
+
+.img7 {
+    padding-top: 110px;
+    
+    margin-left: 40px;
+}
+
+.img8 {
+    margin-top: 10px;
+    margin-right: 85px;
+}
+
+.imgBoxPara {
+    margin-top: 85px;
+    color:  #9A54BC;
+    
+}
