--- a/css/main.css
+++ b/css/main.css
@@ -352,29 +352,146 @@ iframe {
     margin-left: 5px;
 }
 
-.collabCardsConatainer {
+.collabCardsContainer {
     display: flex;
     justify-content: space-around;
     width: 50%;
     margin-top: 50px;
+    margin-bottom: 150px;
+   
 }
-
-
+ 
+ 
 .card {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    border: 1px solid #A79D9D;
-
+    border: 0.5px solid #AAAAAA;
+    border-radius: 6px;
+    padding: 20px;
+    width: 180px;
+       
 }
-
+ 
 .collabCardsList {
     list-style: none;
+    position: relative;
+    font-weight: 400;
+    font-size: 9px;
+    color: #000000B2;
+    padding: 5px;
+  }
+ 
+.collabCardsList::before {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 6px solid #000;
+    margin-right: 8px;
+    transform: rotate(90deg);
+}
+ 
+.collabCardsBtn {
+    padding: 10px;
+    border: 2px solid #2B0236;
+    background-color: white;
+    border-radius: 3px;
+    margin-top: 10px;
+    transition: all 0.2s ease-in;
+    cursor: pointer;
+}
+ 
+.collabCardsBtn:hover {
+    background-color: black;
+    color: #fff;    
+}
+ 
+.card:nth-child(3) {
+    background-color: #56E6A5;
+ 
+}
+ 
+.card:nth-child(3) .collabCardsBtn {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+ 
+.h3 {
+    font-weight: 600;
+    text-align: center;
+    font-size: 21px;
+   
+}
+ 
+.h4 {
+    font-weight: 500;
+    width: 50px;
+    height: 15px;
+    text-align: center;
+    font-size: 11.5px;
+}
+ 
+.enterpriseText {
+    font-weight: 400;
+    font-size: 9px;
+    color: #000000B2;
+}
+ 
+.review {
+    margin: auto;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-weight: 500;
+    font-size: 10.5px;
+    position: relative;
+    padding: 0 20px;
+ 
+}
+ 
+.stars {
+    margin-bottom: 60px;
+   
+}
+ 
+.face {
+    margin-top: 40px;
+   
+}
+ 
+.faceText {
+    font-weight: 400;
+    font-size: 12px;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
-
-.collabCardsList::before {
-    
+.collabAppText {
+    font-size: 12px;
+}
+ 
+.backgroundReview{
+    background-color: #e2bdf20e;
+    width: 100%;
+}
+ 
+.backgroundReview img.aLeft {
+    position: relative;
+    left: 20%;
+    top: 135px;
+   
+}
+ 
+.backgroundReview img.aRight {
+    position: relative;
+    right: -80%;
+    top: 135px;
+   
 }
 
 
@@ -486,4 +603,211 @@ iframe {
     margin-top: 85px;
     color:  #9A54BC;
     
+}
+
+
+
+
+
+
+
+
+
+.collabDownloadApps {
+    width: 100%;
+    height: 500px;
+    margin-top: 100px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    background-color: #9A54BC;
+}
+
+.collabDownloadText {
+    color:#fff;
+    font-weight: 600;
+    font-size: 50px;
+    margin-top: 50px;
+}
+
+.downloadThreeBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 50%;
+}
+
+.downloadBtn {
+
+    padding: 10px 20px;
+    background-color: #9A54BC;
+    border: 3px solid #fff;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 17px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+}
+
+.btn1 {
+    padding: 10px 30px;
+}
+.btn2 {
+    padding: 10px 40px;
+}
+
+.downloadBtn:hover {
+    background-color: #fff;
+    color: #9A54BC;
+}
+
+.collabMap {
+    background-color: #e2bdf213;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    align-items: center;
+}
+
+.leftText {
+    width: 40%;
+    margin-left: 50px;
+    padding-left: 60px;
+}
+
+.leftTextTitle {
+    font-size: 40px;
+}
+
+.leftTextContact {
+    text-align: center;
+    margin: 40px;
+    font-weight: bold;
+
+}
+
+.rightMap {
+    width: 60%;
+}
+
+.mapImg {
+    width: 775px;
+    object-fit: fill;
+}
+
+
+
+
+
+
+.footerCollab{
+    display: flex;
+    justify-content:center;
+    flex-direction: row;
+    gap: 170px;
+    margin-top: 80px;
+}
+.colabImgSocialstittle{
+    font-family: Roboto;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 21px;
+    letter-spacing: 0em;
+
+
+
+}
+.footerCollabsocials{
+    width: 224px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.footerCollabsocialstittle{
+    font-family: "Comfortaa", sans-serif;
+    color:rgb(154, 84, 188);
+    font-size: 36px;
+    line-height: 30px;
+    font-weight: 500;
+}
+.footerCollabsocialstext{
+    color: black;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: left;
+
+
+}
+
+.footercollabImgSocials{
+    display: flex;
+    flex-direction: column;
+}
+.footercollabImgIconGroup{
+    display: flex;
+    flex-direction: row;
+   
+}
+
+.footercollabImgSocialstittle{
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+.footercollabImgIcon{
+   margin-right: 7px;
+}
+
+.footerCollabtext{
+    margin-top: 60px;
+    font-size: 19px ;
+    font-weight: 700;
+    line-height: 23px;
+   
+}
+.footerCollablist{
+    padding-top: 25px;
+    list-style: none;
+    font-size: 17px ;
+    font-weight: 300;
+    line-height: 21px;
+    color: #60267f;
+}
+
+.footerCollabemail{
+    margin: 50px 585px;
+    display: flex;
+    flex-direction: row;
+    gap:100px;
+   }
+
+.copyrightCollab{
+    width: auto;
+    height: 24px;
+    background-color: #60267f;
+    position: relative;
+    margin-top:80px;
+       
+}
+.textcopyryghtCollab{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    line-height: 16px;
+
 }
